--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <a href=""><i class="ti-twitter"></i></a>
                 <a href=""><i class="ti-linkedin"></i></a>
             </div>
-            <p class="copyright">Powered by <a href="">w3.css</a></p>
+            <p class="copyright">Coppy right <a href="">w3.css - TUNG DUY TRAN remake</a></p>
         </div>
     </div>
 
