--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <!-- End: Contact section -->
 
             <div class="map-section">
-                <img src="/assets/css/img/map.jpg" alt="map">
+                <img src="./assets/css/img/map.jpg" alt="map">
             </div>
         </div>
 
