--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <a href=""><i class="ti-twitter"></i></a>
                 <a href=""><i class="ti-linkedin"></i></a>
             </div>
-            <p class="copyright">TUNG TRAN DUY (remake) - coppyright <a href="https://www.w3schools.com/w3css/tryw3css_templates_band.htm#"> w3.css -</a></p>
+            <p class="copyright">TUNG TRAN DUY (remake) - coppyright <a href="https://www.w3schools.com/w3css/tryw3css_templates_band.htm#"> w3.css</a></p>
         </div>
     </div>
 
